ie6 layout bug troubleshooting for rtl
-ddl

--- a/assets/main/css/main.css
+++ b/assets/main/css/main.css
@@ -393,7 +393,7 @@ Act 3: Footer
 }
 #main-body, #masthead-body {
   float: left;
-  padding-right: 15px;
+  margin-right: 30px;
   width: 630px;
 }
 #masthead-body {
@@ -405,7 +405,6 @@ Act 3: Footer
 #main-sidebar, #masthead-sidebar {
   float: left;
   overflow: hidden;
-  padding-left: 15px;
   width: 300px;
 }
 #site-name {
