--- a/assets/main/less/structure.less
+++ b/assets/main/less/structure.less
@@ -42,7 +42,7 @@ Act 3: Footer
 #main-body,
 #masthead-body {
 	float: left;
-	padding-right: 15px;
+	margin-right: 30px;
 	width: 630px;
 }
 #masthead-body {
@@ -58,7 +58,6 @@ Act 3: Footer
 #masthead-sidebar {
 	float: left;
 	overflow: hidden;
-	padding-left: 15px;
 	width: 300px;
 }
 
